--- a/intake.html
+++ b/intake.html
@@ -1,1 +1,472 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>YardFlow Command Center — INTAKE</title>
+<style>
+  :root{
+    --bg:#070b14; --panel:#0f1727; --panel2:#0b1220; --text:#eaf1ff; --muted:#9fb3d1;
+    --line:rgba(255,255,255,.10); --accent:#3aa0ff; --good:#3dff8d; --warn:#ffd166; --bad:#ff4d6d;
+    --r:18px; --r2:22px; --mono: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+    --sans: system-ui,-apple-system, Segoe UI, Roboto, Arial;
+    --shadow: 0 22px 60px rgba(0,0,0,.45);
+  }
+  *{box-sizing:border-box}
+  body{
+    margin:0; color:var(--text); font-family:var(--sans);
+    background:
+      radial-gradient(900px 600px at 15% -10%, rgba(58,160,255,.20), transparent 60%),
+      radial-gradient(900px 600px at 95% 10%, rgba(61,255,141,.10), transparent 55%),
+      var(--bg);
+  }
+  header{
+    position:sticky; top:0; z-index:10;
+    padding:14px 16px; border-bottom:1px solid var(--line);
+    background:linear-gradient(180deg, rgba(15,23,39,.92), rgba(7,11,20,.70));
+    backdrop-filter: blur(10px);
+    display:flex; gap:12px; align-items:center; justify-content:space-between;
+  }
+  .brand{display:flex; gap:12px; align-items:center}
+  .logo{
+    width:38px; height:38px; border-radius:14px;
+    background:linear-gradient(135deg, rgba(58,160,255,.95), rgba(61,255,141,.55));
+    box-shadow:0 14px 40px rgba(0,0,0,.45);
+  }
+  .title{font-weight:900; letter-spacing:.2px}
+  .sub{color:var(--muted); font-size:12px; line-height:1.2}
+  .nav{display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:flex-end}
+  .chip{
+    font-size:12px; padding:7px 10px; border-radius:999px; border:1px solid var(--line);
+    background:rgba(255,255,255,.04); color:var(--text); text-decoration:none; font-weight:800;
+  }
+  .chip.active{border-color:rgba(58,160,255,.65); box-shadow:0 0 0 2px rgba(58,160,255,.12) inset}
+  .wrap{
+    display:grid; grid-template-columns: 360px 1fr; gap:14px;
+    padding:14px; max-width:1500px; margin:0 auto;
+  }
+  @media (max-width: 1040px){ .wrap{grid-template-columns:1fr} }
+  .card{
+    background:linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.02));
+    border:1px solid var(--line);
+    border-radius:var(--r2);
+    box-shadow: var(--shadow);
+    overflow:hidden;
+  }
+  .card h3{
+    margin:0; padding:12px 12px;
+    border-bottom:1px solid var(--line);
+    display:flex; align-items:center; justify-content:space-between; gap:10px;
+    font-size:14px; letter-spacing:.2px;
+  }
+  .card .body{padding:12px}
+  .gridKpi{display:grid; grid-template-columns: repeat(4, 1fr); gap:10px}
+  @media (max-width: 1040px){ .gridKpi{grid-template-columns: repeat(2, 1fr)} }
+  .kpi{
+    border:1px solid var(--line); border-radius:18px; padding:10px;
+    background:rgba(0,0,0,.20);
+  }
+  .kpi .label{color:var(--muted); font-size:11px}
+  .kpi .value{font-weight:950; font-size:18px; margin-top:4px}
+  .kpi .mini{color:var(--muted); font-size:11px; margin-top:2px}
+  .lab{font-size:12px; color:var(--muted); margin:10px 0 6px}
+  input, select, textarea{
+    width:100%; padding:10px 10px; border-radius:14px;
+    border:1px solid var(--line); background:rgba(0,0,0,.25); color:var(--text);
+    outline:none;
+  }
+  textarea{min-height:96px; resize:vertical}
+  .row{display:grid; grid-template-columns:1fr 1fr; gap:10px}
+  .row3{display:grid; grid-template-columns:1fr 1fr 1fr; gap:10px}
+  .btns{display:flex; gap:10px; flex-wrap:wrap}
+  button{
+    border:none; border-radius:14px; padding:10px 12px; cursor:pointer;
+    background:rgba(255,255,255,.06); color:var(--text); font-weight:900;
+    border:1px solid var(--line);
+  }
+  button.primary{background:linear-gradient(135deg, rgba(58,160,255,.95), rgba(58,160,255,.55)); border-color:rgba(58,160,255,.55)}
+  button.good{background:linear-gradient(135deg, rgba(61,255,141,.85), rgba(61,255,141,.35)); border-color:rgba(61,255,141,.55); color:#06210f}
+  button.warn{background:linear-gradient(135deg, rgba(255,209,102,.9), rgba(255,209,102,.35)); border-color:rgba(255,209,102,.55); color:#241600}
+  .list{display:flex; flex-direction:column; gap:8px; max-height:62vh; overflow:auto; padding-right:6px}
+  .item{
+    padding:10px; border-radius:18px; border:1px solid var(--line);
+    background:rgba(255,255,255,.03); cursor:pointer;
+  }
+  .item .top{display:flex; justify-content:space-between; gap:10px; align-items:center}
+  .tp{font-family:var(--mono); font-weight:950; font-size:12px}
+  .pill{font-size:11px; padding:5px 8px; border-radius:999px; border:1px solid var(--line); color:var(--muted)}
+  .meta{color:var(--muted); font-size:12px; margin-top:6px; line-height:1.25}
+  .divider{height:1px; background:var(--line); margin:12px 0}
+  .hint{color:var(--muted); font-size:12px; line-height:1.35}
+  .rightHead{display:flex; align-items:center; justify-content:space-between; gap:10px}
+  .statusLine{color:var(--muted); font-size:12px}
+  .toast{
+    position:fixed; left:14px; bottom:14px;
+    background:rgba(0,0,0,.65); border:1px solid var(--line);
+    padding:10px 12px; border-radius:14px; display:none;
+  }
+  .checklist{display:grid; gap:8px}
+  .check{
+    display:flex; gap:10px; align-items:flex-start;
+    border:1px solid var(--line); border-radius:16px; padding:10px;
+    background:rgba(0,0,0,.18);
+  }
+  .check b{font-size:12px}
+  .check span{color:var(--muted); font-size:12px; line-height:1.25}
+  .shortcut{font-family:var(--mono); font-size:11px; color:var(--muted)}
+</style>
+</head>
+<body>
+<header>
+  <div class="brand">
+    <div class="logo"></div>
+    <div>
+      <div class="title">YardFlow Command Center</div>
+      <div class="sub"><b>INTAKE</b> • Receiving + Tagging • UI-only mock (sheet hookup later)</div>
+    </div>
+  </div>
 
+  <div class="nav">
+    <a class="chip active" href="./intake.html">Intake</a>
+    <a class="chip" href="./processing.html">Processing</a>
+    <a class="chip" href="./staging.html">Staging</a>
+    <a class="chip" href="./logistics.html">Logistics</a>
+    <button class="primary" onclick="newItem()">+ New TP</button>
+  </div>
+</header>
+
+<div class="wrap">
+  <div class="card">
+    <h3>INTAKE Queue <span class="pill" id="queueCount">0</span></h3>
+    <div class="body">
+      <div class="lab">Search</div>
+      <input id="q" placeholder="TP, model, brand…" oninput="renderList()" />
+
+      <div class="row">
+        <div>
+          <div class="lab">Filter: Category</div>
+          <select id="filtCategory" onchange="renderList()"></select>
+        </div>
+        <div>
+          <div class="lab">Sort</div>
+          <select id="sortBy" onchange="renderList()">
+            <option value="newest">Newest</option>
+            <option value="oldest">Oldest</option>
+            <option value="tp">TP#</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="divider"></div>
+      <div class="list" id="list"></div>
+
+      <div class="divider"></div>
+      <div class="hint">
+        <b>Shortcuts:</b> <span class="shortcut">Enter</span> save • <span class="shortcut">Ctrl</span>+<span class="shortcut">→</span> next stage • <span class="shortcut">Ctrl</span>+<span class="shortcut">F</span> focus search
+      </div>
+    </div>
+  </div>
+
+  <div style="display:grid; gap:14px">
+    <div class="card">
+      <h3>Today’s Snapshot</h3>
+      <div class="body">
+        <div class="gridKpi">
+          <div class="kpi">
+            <div class="label">In Intake Queue</div>
+            <div class="value" id="kpiQueue">0</div>
+            <div class="mini">items waiting</div>
+          </div>
+          <div class="kpi">
+            <div class="label">Created Today</div>
+            <div class="value" id="kpiToday">0</div>
+            <div class="mini">new TP#</div>
+          </div>
+          <div class="kpi">
+            <div class="label">Avg Notes Length</div>
+            <div class="value" id="kpiNotes">0</div>
+            <div class="mini">characters</div>
+          </div>
+          <div class="kpi">
+            <div class="label">Fastest Win</div>
+            <div class="value" id="kpiWin">—</div>
+            <div class="mini">auto-highlight</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <h3><div class="rightHead"><span>Intake Form</span><span class="statusLine" id="statusLine">—</span></div></h3>
+      <div class="body" id="detail">
+        <div class="hint">Select an item on the left or hit <b>+ New TP</b>.</div>
+      </div>
+    </div>
+
+    <div class="card">
+      <h3>INTAKE Checklist</h3>
+      <div class="body">
+        <div class="checklist">
+          <div class="check"><div>✅</div><div><b>Tag it</b><br><span>Give TP#, basic identity fields.</span></div></div>
+          <div class="check"><div>✅</div><div><b>Sort it</b><br><span>Category + Brand + Model + Color.</span></div></div>
+          <div class="check"><div>✅</div><div><b>Capture notes</b><br><span>Missing parts, obvious damage, lot info.</span></div></div>
+          <div class="check"><div>✅</div><div><b>Send forward</b><br><span>Next → Processing when ready.</span></div></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="toast" id="toast"></div>
+
+<script>
+/*** Shared UI engine (mock DB). Same KEY used across all pages. ***/
+const KEY = "yardflow_commandcenter_db_v1";
+const STAGE = "INTAKE";
+const NEXT_STAGE = "PROCESSING";
+const PREV_STAGE = null;
+
+const DROPDOWNS = {
+  Category: ["Laptop","Desktop","Tablet","Console","Parts","Accessory","Other"],
+  Brand: ["Dell","Lenovo","HP","Apple","Acer","ASUS","Microsoft","Samsung","Other"],
+  Color: ["Black","Silver","White","Gray","Blue","Red","Green","Other"]
+};
+
+let db = [];
+let currentTP = null;
+
+function toast(msg){
+  const t = document.getElementById("toast");
+  t.textContent = msg;
+  t.style.display = "block";
+  setTimeout(()=> t.style.display="none", 1600);
+}
+
+function todayKey(){
+  const d = new Date();
+  const y = d.getFullYear();
+  const m = String(d.getMonth()+1).padStart(2,"0");
+  const day = String(d.getDate()).padStart(2,"0");
+  return `${y}${m}${day}`;
+}
+
+function loadDB(){
+  const raw = localStorage.getItem(KEY);
+  if (raw) db = JSON.parse(raw);
+  else {
+    // Seed example data spanning stages so you can see flow across pages.
+    db = [
+      {TP:`TP-${todayKey()}-0001`, Stage:"INTAKE", CreatedAt:Date.now(), UpdatedAt:Date.now(),
+        Category:"Laptop", Brand:"Dell", Model:"Latitude 5420", Color:"Black", IntakeNotes:"No charger. Sticker residue on lid."},
+
+      {TP:`TP-${todayKey()}-0002`, Stage:"PROCESSING", CreatedAt:Date.now()-600000, UpdatedAt:Date.now()-600000,
+        ScreenSizeIn:"15.6", CPU:"i5-1135G7", StorageGB:"256", Features:"Backlit KB\nFingerprint", GPU:"Intel UHD",
+        Series:"Latitude", MemoryGB:"16", Connectivity:"Wi-Fi + BT", Condition:"B"},
+
+      {TP:`TP-${todayKey()}-0003`, Stage:"STAGING", CreatedAt:Date.now()-1200000, UpdatedAt:Date.now()-1200000,
+        Title:"Lenovo ThinkPad T480 i5 16GB 256GB SSD", OperatingSystem:"Windows 11", Warranty:"30 Day",
+        Description:"Tested, cleaned, ready to ship.", PriceUSD:"169.99", ShippingPolicy:"Free Shipping"},
+
+      {TP:`TP-${todayKey()}-0004`, Stage:"LOGISTICS", CreatedAt:Date.now()-2000000, UpdatedAt:Date.now()-2000000,
+        DimensionsLxWxH:"14 x 9 x 2", WeightValue:"4.2", WeightUnit:"lb", Location:"A-1", Status:"Shelved"}
+    ];
+    saveDB();
+  }
+}
+function saveDB(){ localStorage.setItem(KEY, JSON.stringify(db)); }
+
+function uniq(list){ return [...new Set(list.filter(Boolean))]; }
+
+function setFilterOptions(){
+  const sel = document.getElementById("filtCategory");
+  const values = uniq(db.filter(x=>x.Stage===STAGE).map(x=>x.Category));
+  sel.innerHTML = `<option value="">All</option>` + values.map(v=>`<option>${escapeHtml(v)}</option>`).join("");
+}
+
+function renderKPIs(){
+  const queue = db.filter(x=>x.Stage===STAGE);
+  document.getElementById("kpiQueue").textContent = queue.length;
+
+  const tkey = todayKey();
+  const createdToday = db.filter(x=> (x.TP||"").includes(`TP-${tkey}-`)).length;
+  document.getElementById("kpiToday").textContent = createdToday;
+
+  const notes = queue.map(x => (x.IntakeNotes||"").length);
+  const avg = notes.length ? Math.round(notes.reduce((a,b)=>a+b,0)/notes.length) : 0;
+  document.getElementById("kpiNotes").textContent = avg;
+
+  // "Fastest win" highlight: items missing model (quickly fix)
+  const win = queue.find(x => !(x.Model||"").trim());
+  document.getElementById("kpiWin").textContent = win ? "Fill missing model" : "All good";
+}
+
+function renderList(){
+  const q = (document.getElementById("q").value || "").toLowerCase();
+  const cat = document.getElementById("filtCategory").value || "";
+  const sortBy = document.getElementById("sortBy").value;
+
+  let list = db.filter(x=>x.Stage===STAGE);
+
+  if (cat) list = list.filter(x => (x.Category||"") === cat);
+
+  if (q){
+    list = list.filter(x=>{
+      const hay = [x.TP,x.Category,x.Brand,x.Model,x.Color,x.IntakeNotes].join(" ").toLowerCase();
+      return hay.includes(q);
+    });
+  }
+
+  if (sortBy==="newest") list.sort((a,b)=>(b.CreatedAt||0)-(a.CreatedAt||0));
+  if (sortBy==="oldest") list.sort((a,b)=>(a.CreatedAt||0)-(b.CreatedAt||0));
+  if (sortBy==="tp") list.sort((a,b)=>(a.TP||"").localeCompare(b.TP||""));
+
+  document.getElementById("queueCount").textContent = list.length;
+
+  const el = document.getElementById("list");
+  el.innerHTML = "";
+
+  if (!list.length){
+    el.innerHTML = `<div class="hint">No items in ${STAGE}. (Either you’re crushing it… or the gremlins hid the pallets.)</div>`;
+    return;
+  }
+
+  list.forEach(it=>{
+    const d = document.createElement("div");
+    d.className = "item";
+    d.onclick = ()=> openItem(it.TP);
+    const missing = (!it.Category || !it.Brand || !it.Model || !it.Color) ? ` <span class="pill" style="border-color:rgba(255,209,102,.55)">Needs fields</span>` : "";
+    d.innerHTML = `
+      <div class="top">
+        <div class="tp">${escapeHtml(it.TP)}</div>
+        <div class="pill">${escapeHtml(it.Category || "—")}</div>
+      </div>
+      <div class="meta">
+        <b>${escapeHtml(it.Brand || "—")}</b> ${escapeHtml(it.Model || "")}${missing}<br>
+        Color: ${escapeHtml(it.Color || "—")}
+        ${it.IntakeNotes ? `<br>📝 ${escapeHtml(it.IntakeNotes).slice(0,60)}${it.IntakeNotes.length>60?'…':''}` : ""}
+      </div>
+    `;
+    el.appendChild(d);
+  });
+
+  setFilterOptions();
+  renderKPIs();
+}
+
+function selectHTML(list, selected){
+  return `<option value="">—</option>` + list.map(v=>`<option ${v===selected?'selected':''}>${escapeHtml(v)}</option>`).join("");
+}
+
+function openItem(tp){
+  currentTP = tp;
+  const it = db.find(x=>x.TP===tp);
+  if (!it) return;
+
+  document.getElementById("statusLine").textContent = `${it.TP} • Stage: ${it.Stage}`;
+
+  document.getElementById("detail").innerHTML = `
+    <div class="row">
+      <div>
+        <div class="lab">Category</div>
+        <select id="f_Category">${selectHTML(DROPDOWNS.Category, it.Category)}</select>
+      </div>
+      <div>
+        <div class="lab">Brand</div>
+        <select id="f_Brand">${selectHTML(DROPDOWNS.Brand, it.Brand)}</select>
+      </div>
+    </div>
+
+    <div class="row">
+      <div>
+        <div class="lab">Model</div>
+        <input id="f_Model" value="${escapeAttr(it.Model||"")}" placeholder="e.g., Latitude 5420" />
+      </div>
+      <div>
+        <div class="lab">Color</div>
+        <select id="f_Color">${selectHTML(DROPDOWNS.Color, it.Color)}</select>
+      </div>
+    </div>
+
+    <div class="lab">Intake Notes</div>
+    <textarea id="f_IntakeNotes" placeholder="missing charger, cracked screen, lot tag…">${escapeHtml(it.IntakeNotes||"")}</textarea>
+
+    <div class="divider"></div>
+    <div class="btns">
+      <button class="good" onclick="save()">Save</button>
+      <button class="primary" onclick="moveNext()">Next → ${NEXT_STAGE}</button>
+    </div>
+
+    <div class="hint" style="margin-top:10px">
+      This station only edits: <b>Category, Brand, Model, Color, IntakeNotes</b>.
+    </div>
+  `;
+}
+
+function save(){
+  if (!currentTP) return;
+  const it = db.find(x=>x.TP===currentTP);
+  if (!it) return;
+
+  it.Category = document.getElementById("f_Category").value;
+  it.Brand = document.getElementById("f_Brand").value;
+  it.Model = document.getElementById("f_Model").value.trim();
+  it.Color = document.getElementById("f_Color").value;
+  it.IntakeNotes = document.getElementById("f_IntakeNotes").value;
+  it.UpdatedAt = Date.now();
+
+  saveDB();
+  renderList();
+  toast("Saved");
+}
+
+function moveNext(){
+  if (!currentTP) return;
+  save();
+  const it = db.find(x=>x.TP===currentTP);
+  it.Stage = NEXT_STAGE;
+  it.UpdatedAt = Date.now();
+  saveDB();
+  currentTP = null;
+  document.getElementById("detail").innerHTML = `<div class="hint">Moved to <b>${NEXT_STAGE}</b> (mock).</div>`;
+  document.getElementById("statusLine").textContent = "—";
+  renderList();
+  toast("Forwarded");
+}
+
+function newItem(){
+  const tkey = todayKey();
+  const todays = db.filter(x => (x.TP||"").includes(`TP-${tkey}-`));
+  const nextN = String(todays.length + 1).padStart(4,"0");
+  const tp = `TP-${tkey}-${nextN}`;
+
+  db.unshift({
+    TP: tp, Stage: STAGE,
+    CreatedAt: Date.now(), UpdatedAt: Date.now(),
+    Category:"", Brand:"", Model:"", Color:"", IntakeNotes:""
+  });
+  saveDB();
+  renderList();
+  openItem(tp);
+  toast("New TP created");
+}
+
+function escapeHtml(s){
+  return String(s||"").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;").replaceAll('"',"&quot;");
+}
+function escapeAttr(s){
+  return escapeHtml(s).replaceAll("'","&#39;");
+}
+
+// Keyboard shortcuts
+document.addEventListener("keydown", (e)=>{
+  if (e.ctrlKey && (e.key==="f" || e.key==="F")){ e.preventDefault(); document.getElementById("q").focus(); }
+  if (e.key==="Enter" && currentTP && document.activeElement && document.activeElement.tagName!=="TEXTAREA"){ e.preventDefault(); save(); }
+  if (e.ctrlKey && e.key==="ArrowRight"){ e.preventDefault(); if(currentTP) moveNext(); }
+});
+
+loadDB();
+setFilterOptions();
+renderList();
+</script>
+</body>
+</html>
