--- a/logistics.html
+++ b/logistics.html
@@ -1,1 +1,324 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>YardFlow Command Center — LOGISTICS</title>
+<style>
+  :root{--bg:#070b14;--text:#eaf1ff;--muted:#9fb3d1;--line:rgba(255,255,255,.10);--accent:#3aa0ff;--good:#3dff8d;--warn:#ffd166;--r2:22px;--mono:ui-monospace,Menlo,Consolas,monospace;--sans:system-ui,-apple-system,Segoe UI,Roboto,Arial;--shadow:0 22px 60px rgba(0,0,0,.45)}
+  *{box-sizing:border-box}
+  body{margin:0;color:var(--text);font-family:var(--sans);background:radial-gradient(900px 600px at 15% -10%, rgba(61,255,141,.16), transparent 60%),radial-gradient(900px 600px at 95% 10%, rgba(58,160,255,.12), transparent 55%),var(--bg)}
+  header{position:sticky;top:0;z-index:10;padding:14px 16px;border-bottom:1px solid var(--line);background:linear-gradient(180deg, rgba(15,23,39,.92), rgba(7,11,20,.70));backdrop-filter:blur(10px);display:flex;gap:12px;align-items:center;justify-content:space-between}
+  .brand{display:flex;gap:12px;align-items:center}
+  .logo{width:38px;height:38px;border-radius:14px;background:linear-gradient(135deg, rgba(61,255,141,.85), rgba(58,160,255,.55));box-shadow:0 14px 40px rgba(0,0,0,.45)}
+  .title{font-weight:900}
+  .sub{color:var(--muted);font-size:12px;line-height:1.2}
+  .nav{display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:flex-end}
+  .chip{font-size:12px;padding:7px 10px;border-radius:999px;border:1px solid var(--line);background:rgba(255,255,255,.04);color:var(--text);text-decoration:none;font-weight:800}
+  .chip.active{border-color:rgba(61,255,141,.65);box-shadow:0 0 0 2px rgba(61,255,141,.12) inset}
+  .wrap{display:grid;grid-template-columns:360px 1fr;gap:14px;padding:14px;max-width:1500px;margin:0 auto}
+  @media (max-width:1040px){.wrap{grid-template-columns:1fr}}
+  .card{background:linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.02));border:1px solid var(--line);border-radius:var(--r2);box-shadow:var(--shadow);overflow:hidden}
+  .card h3{margin:0;padding:12px;border-bottom:1px solid var(--line);display:flex;align-items:center;justify-content:space-between;gap:10px;font-size:14px}
+  .body{padding:12px}
+  .gridKpi{display:grid;grid-template-columns:repeat(4,1fr);gap:10px}
+  @media (max-width:1040px){.gridKpi{grid-template-columns:repeat(2,1fr)}}
+  .kpi{border:1px solid var(--line);border-radius:18px;padding:10px;background:rgba(0,0,0,.20)}
+  .kpi .label{color:var(--muted);font-size:11px}
+  .kpi .value{font-weight:950;font-size:18px;margin-top:4px}
+  .kpi .mini{color:var(--muted);font-size:11px;margin-top:2px}
+  .lab{font-size:12px;color:var(--muted);margin:10px 0 6px}
+  input,select,textarea{width:100%;padding:10px 10px;border-radius:14px;border:1px solid var(--line);background:rgba(0,0,0,.25);color:var(--text);outline:none}
+  textarea{min-height:96px;resize:vertical}
+  .row{display:grid;grid-template-columns:1fr 1fr;gap:10px}
+  .btns{display:flex;gap:10px;flex-wrap:wrap}
+  button{border:none;border-radius:14px;padding:10px 12px;cursor:pointer;background:rgba(255,255,255,.06);color:var(--text);font-weight:900;border:1px solid var(--line)}
+  button.primary{background:linear-gradient(135deg, rgba(58,160,255,.95), rgba(58,160,255,.55));border-color:rgba(58,160,255,.55)}
+  button.good{background:linear-gradient(135deg, rgba(61,255,141,.85), rgba(61,255,141,.35));border-color:rgba(61,255,141,.55);color:#06210f}
+  button.warn{background:linear-gradient(135deg, rgba(255,209,102,.9), rgba(255,209,102,.35));border-color:rgba(255,209,102,.55);color:#241600}
+  .list{display:flex;flex-direction:column;gap:8px;max-height:62vh;overflow:auto;padding-right:6px}
+  .item{padding:10px;border-radius:18px;border:1px solid var(--line);background:rgba(255,255,255,.03);cursor:pointer}
+  .tp{font-family:var(--mono);font-weight:950;font-size:12px}
+  .pill{font-size:11px;padding:5px 8px;border-radius:999px;border:1px solid var(--line);color:var(--muted)}
+  .meta{color:var(--muted);font-size:12px;margin-top:6px;line-height:1.25}
+  .divider{height:1px;background:var(--line);margin:12px 0}
+  .hint{color:var(--muted);font-size:12px;line-height:1.35}
+  .rightHead{display:flex;align-items:center;justify-content:space-between;gap:10px}
+  .statusLine{color:var(--muted);font-size:12px}
+  .toast{position:fixed;left:14px;bottom:14px;background:rgba(0,0,0,.65);border:1px solid var(--line);padding:10px 12px;border-radius:14px;display:none}
+  .affix{display:flex;align-items:center;border:1px solid var(--line);border-radius:14px;overflow:hidden;background:rgba(0,0,0,.25)}
+  .affix input{border:none;border-radius:0;background:transparent}
+  .affix span{padding:0 10px;color:var(--muted);font-size:12px;border-left:1px solid var(--line)}
+</style>
+</head>
+<body>
+<header>
+  <div class="brand">
+    <div class="logo"></div>
+    <div>
+      <div class="title">YardFlow Command Center</div>
+      <div class="sub"><b>LOGISTICS</b> • Pack + Shelf + Status • UI-only mock</div>
+    </div>
+  </div>
 
+  <div class="nav">
+    <a class="chip" href="./intake.html">Intake</a>
+    <a class="chip" href="./processing.html">Processing</a>
+    <a class="chip" href="./staging.html">Staging</a>
+    <a class="chip active" href="./logistics.html">Logistics</a>
+    <button class="primary" onclick="newItem()">+ New TP</button>
+  </div>
+</header>
+
+<div class="wrap">
+  <div class="card">
+    <h3>LOGISTICS Queue <span class="pill" id="queueCount">0</span></h3>
+    <div class="body">
+      <div class="lab">Search</div>
+      <input id="q" placeholder="TP, location, status…" oninput="renderList()" />
+
+      <div class="row">
+        <div>
+          <div class="lab">Filter: Status</div>
+          <select id="filtStatus" onchange="renderList()"></select>
+        </div>
+        <div>
+          <div class="lab">Sort</div>
+          <select id="sortBy" onchange="renderList()">
+            <option value="newest">Newest</option>
+            <option value="oldest">Oldest</option>
+            <option value="tp">TP#</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="divider"></div>
+      <div class="list" id="list"></div>
+
+      <div class="divider"></div>
+      <div class="hint"><b>Goal:</b> Everything has a home (Location) and a truth (Status).</div>
+    </div>
+  </div>
+
+  <div style="display:grid; gap:14px">
+    <div class="card">
+      <h3>Today’s Snapshot</h3>
+      <div class="body">
+        <div class="gridKpi">
+          <div class="kpi"><div class="label">In Logistics</div><div class="value" id="kpiQueue">0</div><div class="mini">items waiting</div></div>
+          <div class="kpi"><div class="label">Missing Location</div><div class="value" id="kpiLoc">0</div><div class="mini">shelf/bin</div></div>
+          <div class="kpi"><div class="label">Missing Weight</div><div class="value" id="kpiWt">0</div><div class="mini">value + unit</div></div>
+          <div class="kpi"><div class="label">Most Common Status</div><div class="value" id="kpiCommon">—</div><div class="mini">dropdown</div></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <h3><div class="rightHead"><span>Logistics Form</span><span class="statusLine" id="statusLine">—</span></div></h3>
+      <div class="body" id="detail"><div class="hint">Select an item from the queue.</div></div>
+    </div>
+
+    <div class="card">
+      <h3>LOGISTICS Checklist</h3>
+      <div class="body">
+        <div class="hint">
+          • Dimensions (L x W x H)<br>
+          • Weight (value + unit)<br>
+          • Location (shelf/bin)<br>
+          • Status (shelved/packed/shipped etc.)<br>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="toast" id="toast"></div>
+
+<script>
+const KEY = "yardflow_commandcenter_db_v1";
+const STAGE = "LOGISTICS";
+const NEXT_STAGE = null;
+const PREV_STAGE = "STAGING";
+
+const DROPDOWNS = {
+  Location: ["A-1","A-2","A-3","B-1","B-2","C-1","Parts Wall","Overflow"],
+  Status: ["Shelved","Packed","Shipped","On Hold","Return","Parts Bin"],
+  WeightUnit: ["lb","oz","kg","g"]
+};
+
+let db = [];
+let currentTP = null;
+
+function toast(msg){const t=document.getElementById("toast");t.textContent=msg;t.style.display="block";setTimeout(()=>t.style.display="none",1600);}
+function loadDB(){db=JSON.parse(localStorage.getItem(KEY)||"[]");}
+function saveDB(){localStorage.setItem(KEY,JSON.stringify(db));}
+function escapeHtml(s){return String(s||"").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;").replaceAll('"',"&quot;");}
+function escapeAttr(s){return escapeHtml(s).replaceAll("'","&#39;");}
+function uniq(list){return [...new Set(list.filter(Boolean))];}
+function selectHTML(list, selected){
+  return `<option value="">—</option>` + list.map(v=>`<option ${v===selected?'selected':''}>${escapeHtml(v)}</option>`).join("");
+}
+function affixSuffix(id, value, placeholder, suffix){
+  return `<div class="affix"><input id="${id}" value="${escapeAttr(value||"")}" placeholder="${escapeAttr(placeholder)}"/><span>${escapeHtml(suffix)}</span></div>`;
+}
+
+function setFilterOptions(){
+  const sel=document.getElementById("filtStatus");
+  const values=uniq(db.filter(x=>x.Stage===STAGE).map(x=>x.Status));
+  sel.innerHTML=`<option value="">All</option>` + values.map(v=>`<option>${escapeHtml(v)}</option>`).join("");
+}
+
+function renderKPIs(){
+  const queue=db.filter(x=>x.Stage===STAGE);
+  document.getElementById("kpiQueue").textContent=queue.length;
+  document.getElementById("kpiLoc").textContent=queue.filter(x=>!(x.Location||"").trim()).length;
+  document.getElementById("kpiWt").textContent=queue.filter(x=>!(x.WeightValue||"").trim() || !(x.WeightUnit||"").trim()).length;
+
+  const st=queue.map(x=>x.Status).filter(Boolean);
+  if(!st.length) document.getElementById("kpiCommon").textContent="—";
+  else{
+    const counts=st.reduce((m,c)=>(m[c]=(m[c]||0)+1,m),{});
+    const top=Object.entries(counts).sort((a,b)=>b[1]-a[1])[0][0];
+    document.getElementById("kpiCommon").textContent=top;
+  }
+}
+
+function renderList(){
+  const q=(document.getElementById("q").value||"").toLowerCase();
+  const st=document.getElementById("filtStatus").value||"";
+  const sortBy=document.getElementById("sortBy").value;
+
+  let list=db.filter(x=>x.Stage===STAGE);
+  if(st) list=list.filter(x=>(x.Status||"")===st);
+  if(q){
+    list=list.filter(x=>{
+      const hay=[x.TP,x.Location,x.Status,x.DimensionsLxWxH,x.WeightValue,x.WeightUnit].join(" ").toLowerCase();
+      return hay.includes(q);
+    });
+  }
+  if(sortBy==="newest") list.sort((a,b)=>(b.CreatedAt||0)-(a.CreatedAt||0));
+  if(sortBy==="oldest") list.sort((a,b)=>(a.CreatedAt||0)-(b.CreatedAt||0));
+  if(sortBy==="tp") list.sort((a,b)=>(a.TP||"").localeCompare(b.TP||""));
+
+  document.getElementById("queueCount").textContent=list.length;
+  const el=document.getElementById("list"); el.innerHTML="";
+
+  if(!list.length){
+    el.innerHTML=`<div class="hint">No items in ${STAGE}.</div>`;
+    setFilterOptions(); renderKPIs(); return;
+  }
+
+  list.forEach(it=>{
+    const d=document.createElement("div");
+    d.className="item";
+    d.onclick=()=>openItem(it.TP);
+    const needs=(!(it.Location||"").trim() || !(it.Status||"").trim()) ? ` <span class="pill" style="border-color:rgba(255,209,102,.55)">Needs placement</span>` : "";
+    d.innerHTML=`
+      <div style="display:flex;justify-content:space-between;gap:10px;align-items:center">
+        <div class="tp">${escapeHtml(it.TP)}</div>
+        <div class="pill">${escapeHtml(it.Status || "—")}</div>
+      </div>
+      <div class="meta">
+        Location: <b>${escapeHtml(it.Location || "—")}</b>${needs}<br>
+        ${it.WeightValue?`${escapeHtml(it.WeightValue)} ${escapeHtml(it.WeightUnit||"")}`:""} ${it.DimensionsLxWxH?`• ${escapeHtml(it.DimensionsLxWxH)}`:""}
+      </div>`;
+    el.appendChild(d);
+  });
+
+  setFilterOptions(); renderKPIs();
+}
+
+function openItem(tp){
+  currentTP=tp;
+  const it=db.find(x=>x.TP===tp);
+  if(!it) return;
+
+  document.getElementById("statusLine").textContent=`${it.TP} • Stage: ${it.Stage}`;
+
+  document.getElementById("detail").innerHTML=`
+    <div class="row">
+      <div>
+        <div class="lab">Dimensions</div>
+        ${affixSuffix("f_DimensionsLxWxH", it.DimensionsLxWxH, "e.g., 14 x 9 x 2", "L×W×H")}
+      </div>
+      <div>
+        <div class="lab">Weight</div>
+        <div class="row" style="grid-template-columns:1fr 140px">
+          <input id="f_WeightValue" value="${escapeAttr(it.WeightValue||"")}" placeholder="e.g., 4.2"/>
+          <select id="f_WeightUnit">${selectHTML(DROPDOWNS.WeightUnit, it.WeightUnit || "lb")}</select>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div>
+        <div class="lab">Location</div>
+        <select id="f_Location">${selectHTML(DROPDOWNS.Location, it.Location)}</select>
+      </div>
+      <div>
+        <div class="lab">Status</div>
+        <select id="f_Status">${selectHTML(DROPDOWNS.Status, it.Status)}</select>
+      </div>
+    </div>
+
+    <div class="divider"></div>
+    <div class="btns">
+      <button class="good" onclick="save()">Save</button>
+      <button class="warn" onclick="movePrev()">← Back</button>
+    </div>
+
+    <div class="hint" style="margin-top:10px">This station edits only: <b>DimensionsLxWxH, WeightValue, WeightUnit, Location, Status</b>.</div>
+  `;
+}
+
+function save(){
+  if(!currentTP) return;
+  const it=db.find(x=>x.TP===currentTP);
+  if(!it) return;
+
+  it.DimensionsLxWxH=document.getElementById("f_DimensionsLxWxH").value.trim();
+  it.WeightValue=document.getElementById("f_WeightValue").value.trim();
+  it.WeightUnit=document.getElementById("f_WeightUnit").value;
+  it.Location=document.getElementById("f_Location").value;
+  it.Status=document.getElementById("f_Status").value;
+
+  it.UpdatedAt=Date.now();
+  saveDB(); renderList(); toast("Saved");
+}
+
+function movePrev(){
+  if(!currentTP) return;
+  save();
+  const it=db.find(x=>x.TP===currentTP);
+  it.Stage=PREV_STAGE; it.UpdatedAt=Date.now();
+  saveDB();
+  currentTP=null;
+  document.getElementById("detail").innerHTML=`<div class="hint">Moved back to <b>${PREV_STAGE}</b> (mock).</div>`;
+  document.getElementById("statusLine").textContent="—";
+  renderList(); toast("Backed");
+}
+
+function todayKey(){
+  const d=new Date();
+  return `${d.getFullYear()}${String(d.getMonth()+1).padStart(2,"0")}${String(d.getDate()).padStart(2,"0")}`;
+}
+function newItem(){
+  const tkey=todayKey();
+  const todays=db.filter(x=>(x.TP||"").includes(`TP-${tkey}-`));
+  const nextN=String(todays.length+1).padStart(4,"0");
+  const tp=`TP-${tkey}-${nextN}`;
+  db.unshift({TP:tp, Stage:STAGE, CreatedAt:Date.now(), UpdatedAt:Date.now()});
+  saveDB(); renderList(); openItem(tp); toast("New TP created");
+}
+
+document.addEventListener("keydown",(e)=>{
+  if(e.ctrlKey && (e.key==="f"||e.key==="F")){e.preventDefault();document.getElementById("q").focus();}
+  if(e.key==="Enter" && currentTP && document.activeElement && document.activeElement.tagName!=="TEXTAREA"){e.preventDefault();save();}
+  if(e.ctrlKey && e.key==="ArrowLeft"){e.preventDefault();if(currentTP) movePrev();}
+});
+
+loadDB();
+renderList();
+</script>
+</body>
+</html>
