--- a/store.html
+++ b/store.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -11,7 +10,7 @@
   <header class="topbar">
     <div class="wrap">
       <div class="brand">
-        <img id="logo" alt="Tek-Pak" />
+        <img id="logo" alt="Tek-Pak" referrerpolicy="no-referrer"/>
         <span class="badge">Store View</span>
       </div>
       <nav class="nav">
@@ -28,7 +27,7 @@
       <div class="hd">
         <div>
           <h2>Storefront (Internal View)</h2>
-          <div class="sub">Shows sellable items only: AVAILABLE + LISTED</div>
+          <div class="sub">Shows sellable items only: <b>AVAILABLE</b> + <b>LISTED</b></div>
         </div>
       </div>
       <div class="bd">
@@ -61,36 +60,77 @@
 
 <script src="./app.js"></script>
 <script>
+/** -------------------------
+ * Safety fallbacks (won’t override your app.js if it already defines these)
+ * ------------------------- */
+window.qs = window.qs || ((sel, root=document)=>root.querySelector(sel));
+window.escHtml = window.escHtml || ((s)=>String(s??"")
+  .replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;").replaceAll('"',"&quot;"));
+window.toast = window.toast || ((msg)=>console.log(msg));
+
+/** If app.js has isSellableStatus, cool.
+    But store page should match the stated rule: AVAILABLE + LISTED. */
+function isSellableHere(status){
+  const st = String(status||"").trim().toUpperCase();
+  return st === "AVAILABLE" || st === "LISTED";
+}
+
 qs("#logo").src = "https://raw.githubusercontent.com/tekpakinc/tekpak-site/b8d52da6ac61c4f06d12cd8b9253cb6103b8dad9/tekpak-logo.png";
+
+/** Render rows */
+function renderRows(items){
+  const sellable = (items || []).filter(it => {
+    // Prefer hard rule. If you WANT to allow app.js logic too, flip this.
+    return isSellableHere(it.Status);
+  });
+
+  qs("#meta").textContent = `Showing ${sellable.length} sellable item(s) (AVAILABLE/LISTED).`;
+
+  qs("#tbody").innerHTML = sellable.map(it => {
+    const st = String(it.Status||"").toUpperCase();
+    const cls = isSellableHere(st) ? "good" : "warn";
+    return `<tr>
+      <td class="mono">${escHtml(it.TP_SKU || "")}</td>
+      <td>${escHtml(it.Title || "")}</td>
+      <td><span class="pill ${cls}">${escHtml(st)}</span></td>
+      <td class="mono">${escHtml(it.Yard_Location || "")}</td>
+      <td>${escHtml(it.List_Price || "")}</td>
+      <td>${escHtml(it.Cosmetic_Notes || it.Notes_Internal || "")}</td>
+    </tr>`;
+  }).join("");
+
+  if (!sellable.length){
+    qs("#tbody").innerHTML = `<tr><td colspan="6" class="small" style="opacity:.8; padding:14px;">
+      No sellable items found in this tab (AVAILABLE/LISTED).
+    </td></tr>`;
+  }
+}
 
 async function load(){
   const tab = qs("#tabSel").value;
   const q = qs("#q").value.trim();
-  try{
-    const data = await apiGet({ action:"listInventory", tab, q });
-    const sellable = data.items.filter(it => isSellableStatus(it.Status));
-    qs("#meta").textContent = `Showing ${sellable.length} sellable item(s) from ${tab}.`;
 
-    qs("#tbody").innerHTML = sellable.map(it => {
-      const st = String(it.Status||"").toUpperCase();
-      const cls = isSellableStatus(st) ? "good" : "warn";
-      return `<tr>
-        <td class="mono">${escHtml(it.TP_SKU || "")}</td>
-        <td>${escHtml(it.Title || "")}</td>
-        <td><span class="pill ${cls}">${escHtml(st)}</span></td>
-        <td class="mono">${escHtml(it.Yard_Location || "")}</td>
-        <td>${escHtml(it.List_Price || "")}</td>
-        <td>${escHtml(it.Cosmetic_Notes || it.Notes_Internal || "")}</td>
-      </tr>`;
-    }).join("");
+  qs("#meta").textContent = `Loading ${tab}…`;
+  qs("#tbody").innerHTML = "";
+
+  try{
+    if (typeof apiGet !== "function") throw new Error("apiGet() is missing (check app.js load path).");
+
+    const data = await apiGet({ action:"listInventory", tab, q });
+    const items = Array.isArray(data?.items) ? data.items : [];
+    renderRows(items);
     toast("Store view loaded.");
   }catch(err){
-    toast(err.message,"bad");
+    qs("#meta").textContent = `Error loading ${tab}.`;
+    toast(err.message || String(err), "bad");
   }
 }
 
 qs("#btnLoad").addEventListener("click", load);
 qs("#q").addEventListener("keydown", (e)=>{ if(e.key==="Enter") load(); });
+qs("#tabSel").addEventListener("change", load);
+
+// initial load
 load();
 </script>
 </body>
